--- a/app/src/main/res/layout/activity_membresia.xml
+++ b/app/src/main/res/layout/activity_membresia.xml
@@ -8,7 +8,7 @@
     tools:context=".MembresiaActivity">
 
     <TextView
-        android:id="@+id/textViewTitle"
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -32,7 +32,7 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/textViewTipo"
+                android:id="@+id/tvTipo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -40,7 +40,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/textViewFechaInicio"
+                android:id="@+id/tvFechaInicio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -48,7 +48,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/textViewFechaFin"
+                android:id="@+id/tvFechaFin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -56,7 +56,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/textViewEstado"
+                android:id="@+id/tvEstado"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -64,7 +64,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/textViewDiasRestantes"
+                android:id="@+id/tvDiasRestantes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
