mejorando diseno de la app

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -85,9 +85,9 @@
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         app:cornerRadius="16dp"
-        app:icon="@drawable/ic_qr"
+        app:icon="@drawable/icon_qr2"
         app:iconPadding="8dp"
-        app:iconSize="30dp"
+        app:iconSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.329"
         app:layout_constraintStart_toStartOf="parent"
